--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
-                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
@@ -67,19 +67,22 @@
     <div class="content">
         <div class="marquee">About the Tour</div>
 <div class="body standard-text">
-    <p>The Wisdom as a Service World Tour was launched as a response to the <a href='//www.getpantheon.com/blog/phpworld-best-show'>tremendous</a>
-    <a href="https://storify.com/coderabbi/talmudic-maxims-to-maximizeyour-growth-as-a-develo">positive</a> <a href="http://ericlbarnes.com/talmudic-maxims-maximize-growth-software-developer/">reaction</a>
-    to the organizer's talk at the recent <a href="//world.phparch.com/">[php]world</a> on community, software craftsmanship, personal development and professional growth.
-    It was immediately obvious that this was a message that the development community was eager to hear, the only question
-    being how to involve more voices in the conversation.</p>
-    <p>Initially the Tour was conceived as a personal undertaking and limited to conferences and a few User Groups in their vicinities,
-    but the overwhelming interest from User Groups around the world made it clear that a larger initiative was needed. A native of Iowa,
-    the organizer has always believed that if you <a href="http://en.wikipedia.org/wiki/Field_of_Dreams">"build it, they will come"</a>... and
-    it wasn't long before the larger Tour became a reality.</p>
-    <p>Sponsorship is still being arranged and Tour events are still being planned, but the expectation is that
-    the Tour will be able to include a minimum of 35 User Groups around the word, connecting with over 2000 PHP
-    developers.  Our hope is that additional speakers can be added to the Tour and that ultimately the Tour
-    can be extended to all User Groups expressing an interest.</p>
+    <p>The Wisdom as a Service World Tour was launched as a response to the
+    <a href="//www.getpantheon.com/blog/phpworld-best-show">tremendous</a>
+    <a href="//storify.com/coderabbi/talmudic-maxims-to-maximizeyour-growth-as-a-develo">positive</a>
+    <a href="//ericlbarnes.com/talmudic-maxims-maximize-growth-software-developer/">reaction</a>
+    to the organizer's talk at the recent <a href="//world.phparch.com/speakers/#64715">[php]world</a>
+    on community, software craftsmanship, personal development and professional growth. It
+    was immediately obvious that this was a message that the development community was eager to hear,
+    the only question being how to involve more voices in the conversation.</p>
+    <p>Initially the Tour was conceived as a personal undertaking and limited to conferences and a few User Groups in their
+    vicinities, but the overwhelming interest from User Groups around the world made it clear that a larger initiative was
+    needed. A native of Iowa, the organizer has always believed that if you "<a href="//en.wikipedia.org/wiki/Field_of_Dreams">build
+    it, they will come</a>"... and it wasn't long before the larger Tour became a reality.</p>
+    <p>Sponsorship is still being arranged and Tour events are still being planned, but the expectation is that the Tour will
+    be able to include a minimum of 35 User Groups around the word, connecting with over 2000 PHP developers. Our hope is
+    that additional speakers can be added to the Tour and that ultimately the Tour can be extended to all User Groups
+    expressing an interest.</p>
 </div>
 <div class="marquee">About the Organizer</div>
 <div class="body standard-text">
@@ -88,8 +91,13 @@
     <p>Passionate about clean code and robust application architecture, he is also a strong proponent of remote teams as a way for software organizations to thrive while affording developers a healthy work:life balance.</p>
     <p>You can see his open-source contributions on <a href="//github.com/coderabbi">github</a> and follow him on <a href="//twitter.com/coderabbi">twitter</a>; you may find him frequently in <a href="//webchat.freenode.net">FreenodeIRC</a>:#coderabbi.</p>
 </div>
+<!--<div class="marquee">About the Speakers</div>
+<div class="body standard-text">
+    <p><span style="font-weight:400">Ed Finkler</span> yada yada yada.</p>
+    <p><span style="font-weight:400">Jeff Carouth</span> blah blah blah.</p>
+</div>-->
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
@@ -99,13 +107,12 @@
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script>
+<script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-58267958-1', 'auto');
-    ga('send', 'pageview');
+    ga('send', '', 'pageview');
 </script>
 </body>
 </html>
