--- a/events/index.html
+++ b/events/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
-                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" class="active">Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
@@ -75,7 +75,9 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">ShorePHP User Group (Tour Kickoff Event)
 						<div class="appearance-details__location">Asbury Park, New Jersey</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Talk: Open Sourcing Mental Illness - Ed Finkler (remote)<br>
+Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
+</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -84,7 +86,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Frysian PHP User Group
 						<div class="appearance-details__location">Leeuwarden, Netherlands</div>
-			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing</p>
+			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -93,7 +95,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Brussels PHP User Group (UG Launch Event)
 						<div class="appearance-details__location">Brussels, Belgium</div>
-			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing</p>
+			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -102,7 +104,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">PHP Benelux Conference
 						<div class="appearance-details__location">Antwerp, Belgium</div>
-			<p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -111,7 +113,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Koln Symfony User Group
 						<div class="appearance-details__location">Cologne, Germany</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -120,7 +122,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Frankfurt PHP User Group
 						<div class="appearance-details__location">Frankfurt, Germany</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -129,7 +131,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Berlin PHP User Group
 						<div class="appearance-details__location">Berlin, Germany</div>
-			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing</p>
+			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -138,7 +140,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Dublin PHP User Group
 						<div class="appearance-details__location">Dublin, Ireland</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -147,7 +149,7 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Glasgow PHP User Group
 						<div class="appearance-details__location">Glasgow, Scotland</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -156,16 +158,16 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Brighton PHP User Group
 						<div class="appearance-details__location">Brighton, England</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
 			February 17, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
-						<p class="appearance-details__event">Warwickshire PHP User Group (UG Launch Event)
+						<p class="appearance-details__event">Warwickshire PHP User Group
 						<div class="appearance-details__location">Warwickshire, England</div>
-			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -174,8 +176,8 @@
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">ConFoo Conference
 						<div class="appearance-details__location">Montreal, Canada</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer<br>
-Talk: From London to Chicago: A Conceptual Map for Unit Testing
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
+Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth
 </p>
 		</div>
     </div>                        <div class="row appearance">
@@ -185,7 +187,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">New York PHP User Group
 						<div class="appearance-details__location">New York, New York</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -194,7 +196,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Lakewood Web Developers Meetup
 						<div class="appearance-details__location">Lakewood, New Jersey</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -203,7 +205,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Milwaukee PHP User Group
 						<div class="appearance-details__location">Milwaukee, Wisconsin</div>
-			<p class="appearance-details__title">Talk: Inside Laravel 5</p>
+			<p class="appearance-details__title">Talk: Inside Laravel 5 - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -212,7 +214,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Madison PHP User Group
 						<div class="appearance-details__location">Madison, Wisconsin</div>
-			<p class="appearance-details__title">Talk: Inside Laravel 5</p>
+			<p class="appearance-details__title">Talk: Inside Laravel 5 - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -221,7 +223,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Rockford PHP User Group
 						<div class="appearance-details__location">Rockford, Illinois</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -230,8 +232,8 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Midwest PHP Conference
 						<div class="appearance-details__location">Minneapolis, Minnesota</div>
-			<p class="appearance-details__title">Talk: Get Off the Freelance Roller-Coaster<br>
-Talk: Inside Laravel 5.0
+			<p class="appearance-details__title">Talk: Get Off the Freelance Roller-Coaster - Yitzchok Willroth<br>
+Talk: Inside Laravel 5.0 - Yitzchok Willroth
 </p>
 		</div>
     </div>                        <div class="row appearance">
@@ -241,7 +243,9 @@ Talk: Inside Laravel 5.0
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Dallas PHP User Group
 						<div class="appearance-details__location">Dallas, Texas</div>
-			<p class="appearance-details__title">TBD</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth<br>
+Talk: TBD - Matt Frost
+</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -250,8 +254,8 @@ Talk: Inside Laravel 5.0
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">LoneStar PHP Conference
 						<div class="appearance-details__location">Addison, Texas</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer<br>
-Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
+Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth & Jeff Carouth
 </p>
 		</div>
     </div>                        <div class="row appearance">
@@ -261,11 +265,11 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">php[tek] Conference
 						<div class="appearance-details__location">Chicago, Illinois</div>
-			<p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>        </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
@@ -275,13 +279,12 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script>
+<script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-58267958-1', 'auto');
-    ga('send', 'pageview');
+    ga('send', '', 'pageview');
 </script>
 </body>
 </html>
