--- a/events/2015-03-15/index.html
+++ b/events/2015-03-15/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: Get Off the Freelance Roller-Coaster&lt;br&gt;
-Talk: Inside Laravel 5.0
+            Talk: Get Off the Freelance Roller-Coaster - Yitzchok Willroth&lt;br&gt;
+Talk: Inside Laravel 5.0 - Yitzchok Willroth
  &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
@@ -54,7 +54,7 @@ Talk: Inside Laravel 5.0
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
-                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
@@ -76,13 +76,12 @@ Talk: Inside Laravel 5.0
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script>
+<script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-58267958-1', 'auto');
-    ga('send', 'pageview');
+    ga('send', '', 'pageview');
 </script>
 </body>
 </html>
