--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
-                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
@@ -73,17 +73,12 @@
     <p class="text-center">A spirited initiative to engage 35+ User Groups representing over 2000 PHP developers around the world in a conversation about Community, Software Craftsmanship, Personal Growth and Professional Development.</p>
 </div>
 
-<!--<div class="description">
-    <p class="standard-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, consequatur ipsam maxime, libero repellendus necessitatibus deserunt voluptas ea, harum autem, iusto quos non modi accusamus laudantium magnam. Repellat deleniti, temporibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lorem erat, luctus at diam sed, dapibus facilisis purus. In laoreet enim nunc, ut pretium arcu scelerisque in. Nunc eu cursus nibh. Etiam pulvinar vulputate libero sed molestie. In condimentum varius faucibus. Vestibulum non blandit sapien, quis tincidunt augue. Aliquam congue sapien eget mattis sagittis. In turpis mi, vestibulum vitae enim quis, mattis commodo leo.</p>
-    <p class="standard-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus laboriosam saepe commodi eius omnis magni, ab provident ex laborum, unde, error similique dolore, velit voluptatum doloribus sit debitis non consectetur?</p>
-</div>-->
-
 <div class="sponsors">
     <div class="sponsor-grid row">
-        <div class="col-lg-12"><div class="sponsor-image-top one-col"">Your Logo Here</div><div class="sponsor-image-bottom titanium"  style="margin-bottom:15px">Benefactor</div></div>
+        <div class="col-lg-12"><div class="sponsor-image-top one-col">Your Logo Here</div><div class="sponsor-image-bottom titanium"  style="margin-bottom:15px">Benefactor</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top" style="padding-top:110px;padding-bottom:105px;font-weight:700;color:#F0F0F0;font-size:80px">TAKEN</div><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col" style="padding-top:81px; padding-bottom:80px"><a href="//forge.laravel.com/"><img src="/assets/img/sponsors/forge.svg"></a></div><div class="sponsor-image-bottom platinum">Partner</div></div>
         <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
@@ -93,7 +88,7 @@
 </div>
 
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
@@ -103,13 +98,12 @@
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script>
+<script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-58267958-1', 'auto');
-    ga('send', 'pageview');
+    ga('send', '', 'pageview');
 </script>
 </body>
 </html>
