--- a/events/index.html
+++ b/events/index.html
@@ -214,7 +214,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Madison PHP User Group
 						<div class="appearance-details__location">Madison, Wisconsin</div>
-			<p class="appearance-details__title">Talk: Inside Laravel 5 - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -223,7 +223,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Rockford PHP User Group
 						<div class="appearance-details__location">Rockford, Illinois</div>
-			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: Talk: Inside Laravel 5 - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -272,7 +272,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
-            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
+            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
 </div>
