--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -135,7 +135,7 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:6px;padding-bottom:6px;"><a href="//voicesoftheelephpant.com"><img src="/assets/img/sponsors/vote.gif" style="height:136px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:3px;padding-bottom:3px;"><a href="//thatpodcast.io"><img src="/assets/img/sponsors/thatpodcast.jpg" style="height:142px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
@@ -196,7 +196,7 @@
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
-            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
+            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
 </div>
