--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -70,7 +70,7 @@
     <center>Thank you for your interest in the Wisdom as a Service World Tour.  Someone will get back with you shortly.</center>
 </div>
         <footer class="primary-footer">
-            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
+            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
 </div>
