--- a/events/2015-02-20/index.html
+++ b/events/2015-02-20/index.html
@@ -69,7 +69,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
     <div class="content">
         
         <footer class="primary-footer">
-            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
+            &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
 </div>
