--- a/faq/index.html
+++ b/faq/index.html
@@ -70,7 +70,7 @@
     <dl class="faq">
                     
 <dt>So what&#039;s with the crazy penguin?</dt>
-<dd>That's not a (mere) penguin, that's <a href="//twitter.com/@coderabbi">@coderabbi</a>, the Tour's <a href="about">organizer</a>.</dd>
+<dd>That's not a (mere) penguin, that's <a href="//twitter.com/@coderabbi">@coderabbi</a>, the Tour's <a href="/about">organizer</a>.</dd>
                     
 <dt>Wisdom? Really!?</dt>
 <dd>Okay, we have to admit that there's an element of whimsy there, but a conversation about Community, Software Craftsmanship, 
