--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -152,7 +152,7 @@
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
-            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-top six-col" style="padding-top:34px; padding-bottom:34px; padding-left:3px; padding-right:3px"><a href="//phphants.co.uk"><img src="/assets/img/sponsors/hampshire.png" style=""></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
