--- a/_posts/dublin-php/index.html
+++ b/_posts/dublin-php/index.html
@@ -5,7 +5,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Dublin PHP User Group
                                         <div class="appearance-details__location">Dublin, Ireland</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                                                                                                                                                         
