--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
                 <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
-                <!--<li><a href="/blog" >Blog</a></li>-->
+                <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" class="active">About</a></li>
@@ -91,11 +91,25 @@
     <p>Passionate about clean code and robust application architecture, he is also a strong proponent of remote teams as a way for software organizations to thrive while affording developers a healthy work:life balance.</p>
     <p>You can see his open-source contributions on <a href="//github.com/coderabbi">github</a> and follow him on <a href="//twitter.com/coderabbi">twitter</a>; you may find him frequently in <a href="//webchat.freenode.net">FreenodeIRC</a>:#coderabbi.</p>
 </div>
-<!--<div class="marquee">About the Speakers</div>
+<div class="marquee">About the Speakers</div>
 <div class="body standard-text">
-    <p><span style="font-weight:400">Ed Finkler</span> yada yada yada.</p>
-    <p><span style="font-weight:400">Jeff Carouth</span> blah blah blah.</p>
-</div>-->
+             <div class="speaker">
+    <span style="font-weight:400">Ed Finkler</span>, also known as <a href="//twitter.com/funkatron">Funkatron</a>, started making web sites before 
+browsers had frames. He does front-end and server-side work in Python, PHP, and JavaScript. He served as web 
+lead and security researcher at <a href="//www.cerias.purdue.edu">The Center for Education and Research 
+in Information Assurance and Security (CERIAS)</a> at Purdue University for 9 years, and he's 
+an partner emeritus of <a href="//fictivekin.com">Fictive Kin</a>. Along with Chris Hartjes, Ed is co-host of 
+the <a hrf="//devhell.info">Development Hell podcast</a>. Ed's current passion is raising mental health awareness 
+in the tech community with his <a href="//funkatron.com/osmi">Open Sourcing Mental Illness</a> speaking campaign. 
+He is part of <a href="//prompt.engineyard.com">Engine Yard's Prompt</a> campaign. Ed writes at <a href="//funkatron.com">
+funkatron.com</a>.
+
+</div>            <div class="speaker">
+    <span style="font-weight:400">Matt Frost</span> is a software engineer who's been writing code since he was a teenager. He's involved in the <a href="//phpmentoring.org">
+PHPMentoring Initiative</a> and loves meeting people in the community. When he's not ranting about Agile, OAuth, Testing or his 
+feelings, he's probably spending quality time with his kids, running, playing music or eating a burrito.
+
+</div>    </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
