--- a/events/index.html
+++ b/events/index.html
@@ -55,7 +55,7 @@
                 <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" class="active">Events</a></li>
-                <!--<li><a href="/blog" >Blog</a></li>-->
+                <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
@@ -86,7 +86,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Frysian PHP User Group
 						<div class="appearance-details__location">Leeuwarden, Netherlands</div>
-			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -140,7 +140,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Dublin PHP User Group
 						<div class="appearance-details__location">Dublin, Ireland</div>
-			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -149,7 +149,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Glasgow PHP User Group
 						<div class="appearance-details__location">Glasgow, Scotland</div>
-			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
