--- a/_posts/january-events/index.html
+++ b/_posts/january-events/index.html
@@ -17,7 +17,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Frysian PHP User Group
                                         <div class="appearance-details__location">Leeuwarden, Netherlands</div>
-                    <p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
