--- a/_posts/winter-european-leg/index.html
+++ b/_posts/winter-european-leg/index.html
@@ -1,3 +1,8 @@
+
+That's it! It's all come together. The opening leg of the Tour has been finalized! We had a tremendous reception to 
+the Tour from European User Groups and we're going to try very hard to get back there for another extended leg later 
+in the year. For now, here's where you can catch the Tour in Europe:
+<br>&nbsp;<br>
                                     <div class="row appearance" style="font-size:20px; margin-left:-100px">
                 <div class="col-md-3 text-right appearance-date">
                     January 20, 2015
@@ -5,7 +10,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Frysian PHP User Group
                                         <div class="appearance-details__location">Leeuwarden, Netherlands</div>
-                    <p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
@@ -65,7 +70,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Dublin PHP User Group
                                         <div class="appearance-details__location">Dublin, Ireland</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
@@ -75,7 +80,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Glasgow PHP User Group
                                         <div class="appearance-details__location">Glasgow, Scotland</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
