--- a/map/index.html
+++ b/map/index.html
@@ -55,7 +55,7 @@
                 <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
-                <!--<li><a href="/blog" >Blog</a></li>-->
+                <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" class="active">Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
