--- a/twitter/index.html
+++ b/twitter/index.html
@@ -55,7 +55,7 @@
                 <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
-                <!--<li><a href="/blog" >Blog</a></li>-->
+                <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" class="active">Twitter</a></li>
                 <li><a href="/about" >About</a></li>
