--- a/about/index.html
+++ b/about/index.html
@@ -105,6 +105,15 @@ He is part of <a href="//prompt.engineyard.com">Engine Yard's Prompt</a> campaig
 funkatron.com</a>.
 
 </div>            <div class="speaker">
+    <span style="font-weight:400">Jeff Carouth</span> is a web application developer honing his programming and skiing 
+skills at <a href="//liftopia.com">Liftopia</a>. He is an active member of the PHP community, speaker, co-organizer of 
+<a href="//www.meetup.com/bcsphp/">BCSPHP</a>, and co-host of the <a href="//looselycoupled.info">Loosely Coupled 
+podcast</a>. He believes quality code, testing, and automation are necessary ingredients in a recipe for a successful 
+software project. When not hacking away at code he is a father and husband, beer and Scotch enthusiast, and an amateur 
+photographer. Follow Jeff on Twitter as <a href='//twitter.com/@jcarouth'>jcarouth</a> or read his blog at 
+<a href="//carouth.com">carouth.com</a>.
+
+</div>            <div class="speaker">
     <span style="font-weight:400">Matt Frost</span> is a software engineer who's been writing code since he was a teenager. He's involved in the <a href="//phpmentoring.org">
 PHPMentoring Initiative</a> and loves meeting people in the community. When he's not ranting about Agile, OAuth, Testing or his 
 feelings, he's probably spending quality time with his kids, running, playing music or eating a burrito.
