--- a/_posts/php-tek/index.html
+++ b/_posts/php-tek/index.html
@@ -5,7 +5,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">php[tek] Conference
                                         <div class="appearance-details__location">Chicago, Illinois</div>
-                    <p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth</p>
                 </div>
             </div>
             
