--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -28,13 +28,18 @@
     <link rel="stylesheet" href="//bootswatch.com/journal/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/vendor/normalize.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Lato:300, 400, 700' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300, 400, 700'  type='text/css'>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/fontawesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/jquery.bxslider.css">
 
     <!--[if lt IE 9]>
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery.bxslider.js"></script>
 </head>
 <body>
 <div class="container">
@@ -76,9 +81,6 @@
         </footer>
     </div>
 </div>
-
-<script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
-<script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
